# python_HW_test

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  requirments.txt
src/: __init__.py  decorators.py  external_api.py  generators.py  masks.py  processing.py  utils1.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils1.py  test_widget.py
